# physical-ai-humanoid-book

./: .env.example  .gitignore  AUTHENTICATION_GUIDE.md  AUTH_QUICK_INTEGRATION.md  DEPLOYMENT_GUIDE.md  EXECUTION_READY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_PROJECT_COMPLETION_REPORT.md  INFRASTRUCTURE_COMPLETE.md  Makefile  ONBOARDING_QUICK_REFERENCE.md  ONBOARDING_SYSTEM_DOCUMENTATION.md  PERSONALIZATION_QUICK_START.md  PERSONALIZATION_SYSTEM_GUIDE.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_INTEGRATION_COMPLETE.md  PHASE_4_EXECUTION_COMPLETE.md  PHASE_4_EXECUTION_PLAN.md  PRODUCTION_DEPLOYMENT_READY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  RAG_UPLOAD_GUIDE.md  README.md  STARTUP_VALIDATION.md  SYSTEM_INTEGRATION_GUIDE.md  TASKS_1_5_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  UAT_PLAN.md  USER_PROFILE_DOCUMENTATION.md  chapter-draft.md  deploy.bat  deploy.sh  diagrams.md  docker-compose.dev.yml  docker-compose.yml  generate_mock_embeddings.py  generate_rag_data.py  qa-report.md  (+3 more)
.claude/: settings.local.json
backend/: .env.example  (+3 more)
specs/1-book-curriculum/chapters/chapter-2/lab/lab2_1_forward_kinematics/: README.md  package.xml
specs/1-book-curriculum/chapters/chapter-2/lab/lab2_1_forward_kinematics/config/: rviz_config.rviz
specs/1-book-curriculum/chapters/chapter-2/lab/lab2_1_forward_kinematics/launch/: lab2_1_fk.launch.py
specs/1-book-curriculum/chapters/chapter-2/lab/lab2_1_forward_kinematics/nodes/: fk_calculator.py
specs/1-book-curriculum/chapters/chapter-2/lab/lab2_1_forward_kinematics/urdf/: 3dof_arm.urdf
(+868 files in other folders)
